working on shape

--- a/css/main.styl
+++ b/css/main.styl
@@ -10,3 +10,9 @@ body, html
 	overflow hidden
 	font-family monospace
 
+// .canvas-e
+// 	background-color black
+
+.guitar-image-e
+	position absolute
+	display none
