--- a/index.jade
+++ b/index.jade
@@ -6,8 +6,9 @@ html
 		link(rel="stylesheet", type="text/css", href="css/main.css")
 		//- link(href='http://fonts.googleapis.com/css?family=Lobster+Two&v1', rel='stylesheet', type='text/css')
 	body
-		canvas(id="myCanvas", class="precious-canvas-e")
+		img(src="i/guitar.png", id="guitar", class="guitar-image-e", alt="")
 
+		canvas(id="myCanvas", class="canvas-e")
 
 		script(type="text/javascript", src="js/lib/jquery-2.0.1.js")
 		script(type="text/javascript", src="js/tween.min.js")
