--- a/css/main.styl
+++ b/css/main.styl
@@ -10,8 +10,8 @@ body, html
 	overflow hidden
 	font-family monospace
 
-// .canvas-e
-// 	background-color black
+.canvas-e
+	background-color black
 
 .guitar-image-e
 	position absolute
