--- a/css/main.styl
+++ b/css/main.styl
@@ -11,8 +11,17 @@ body, html
 	font-family monospace
 
 .canvas-e
-	background-color black
+	background-color #111
 
 .guitar-image-e
 	position absolute
 	display none
+
+.font-holder-e
+	font-family: 'ToneDeafBB'
+	// color white
+	// position absolute
+	// z-index: 20
+	// top 20px
+	// left 20px
+	// font-size 200px
