--- a/index.jade
+++ b/index.jade
@@ -4,11 +4,12 @@ html
 		meta(charset='UTF-8')
 		title Document
 		link(rel="stylesheet", type="text/css", href="css/main.css")
-		//- link(href='http://fonts.googleapis.com/css?family=Lobster+Two&v1', rel='stylesheet', type='text/css')
 	body
 		img(src="i/guitar.png", id="guitar", class="guitar-image-e", alt="")
 
 		canvas(id="myCanvas", class="canvas-e")
+		
+		.font-holder-e &nbsp;
 
 		script(type="text/javascript", src="js/lib/jquery-2.0.1.js")
 		script(type="text/javascript", src="js/tween.min.js")
