before changing string class

--- a/index.jade
+++ b/index.jade
@@ -6,6 +6,7 @@ html
 		link(rel="stylesheet", type="text/css", href="css/main.css")
 	body
 		img(src="i/guitar.png", id="guitar", class="guitar-image-e", alt="")
+		img(src="i/text.png", id="text", class="guitar-image-e", alt="")
 
 		canvas(id="myCanvas", class="canvas-e")
 		
