--- a/index.jade
+++ b/index.jade
@@ -15,4 +15,5 @@ html
 		script(type="text/javascript", src="js/lib/jquery-2.0.1.js")
 		script(type="text/javascript", src="js/tween.min.js")
 		script(type="text/javascript", src="js/paper.js")
+		script(type="text/javascript", src="js/data.js")
 		script(type="text/paperscript", src="js/main.js", canvas="myCanvas")
