--- a/css/main.styl
+++ b/css/main.styl
@@ -47,6 +47,9 @@ body, html
 	.twitter-mask-be
 		position relative
 		z-index 9
+		background: transparent url('../i/twitter.png') no-repeat center center
+		rect 300px
+		display none
 
 	.hover-circle-be
 		rect 50px
@@ -60,6 +63,9 @@ body, html
 			rect 200px
 			top 50px
 			left 50px
+
+			& ~ .twitter-mask-be
+				display block
 
 		&:hover ~ .circle1-be, &:hover ~ .circle2-be, &:hover ~ .circle3-be
 			rect 250px
@@ -96,8 +102,7 @@ body, html
 
 .canvas-e
 	background-color transparent
-	position relative
-	z-index: 10
+	
 
 	&:hover ~ .circle1-be, &:hover ~ .circle2-be, &:hover ~ .circle3-be
 		top 530px
