--- a/index.jade
+++ b/index.jade
@@ -14,7 +14,7 @@ html
 			.hover-circle-be
 				a(class="twitter-icon-text-be", href="http://twitter.com/mailtolego", target="_blank") @mailtolego
 				
-			.twitter-mask-be
+			img(class="twitter-mask-be", src="i/twitter.png", id="twitter", alt="")
 			.circle1-be
 			.circle2-be
 			.circle3-be
