--- a/index.jade
+++ b/index.jade
@@ -6,9 +6,20 @@ html
 		link(rel="stylesheet", type="text/css", href="css/main.css")
 	body
 		img(src="i/guitar.png", id="guitar", class="guitar-image-e", alt="")
-		img(src="i/text.png", id="text", class="guitar-image-e", alt="")
+		//- img(src="i/text.png", id="text", class="guitar-image-e", alt="")
 
 		canvas(id="myCanvas", class="canvas-e")
+
+		.twitter-icon-b
+			.hover-circle-be
+				a(class="twitter-icon-text-be", href="http://twitter.com/mailtolego", target="_blank") @mailtolego
+				
+			.twitter-mask-be
+			.circle1-be
+			.circle2-be
+			.circle3-be
+			
+
 		
 		.font-holder-e &nbsp;
 
