--- a/index.jade
+++ b/index.jade
@@ -27,4 +27,5 @@ html
 		script(type="text/javascript", src="js/tween.min.js")
 		script(type="text/javascript", src="js/paper.js")
 		script(type="text/javascript", src="js/data.js")
+		script(type="text/javascript", src="js/dat.gui.min.js")
 		script(type="text/paperscript", src="js/main.js", canvas="myCanvas")
